test/code/test_class_interface.out
100
200 EUR

Fatal error: Class D contains 2 abstract methods and must therefore be declared abstract or implement the remaining methods (A::foo, B::bar, B::alice) in {{CWD}}/test/code/test_class_interface.php on line 32
